# system-ticket-data-summary

./: .env.example  .gitignore  README.md  app.py  main.py  pipeline.py  pyproject.toml  requirements.txt
data/: headerless_test.txt  mini_test.txt  tickets_converted.csv  tickets_converted.xlsx
docs/: documentation.html
notebooks/: ticket_summary.ipynb
