[project]
name = "vois"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.1",
    "langgraph>=0.4",
    "nbconvert>=7.16",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=5.24",
    "python-dotenv>=1.0",
    "streamlit>=1.45",
]
